# saas-bill-platform

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  logging_config.py  main.py  security.py
app/api/v1/: auth.py  health.py  invoices.py  metrics.py  plans.py  router.py  subscriptions.py  tenants.py  usage.py  webhooks.py
app/domain/: models.py
app/schemas/: auth.py  invoice.py  metrics.py  plan.py  subscription.py  tenant.py  usage.py  user.py  webhook.py
app/services/: auth.py  invoices.py  plans.py  pricing.py  subscriptions.py  usage.py  webhooks.py
app/static/: customer.html  index.html
app/workers/: jobs.py  queue.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_pricing.py  test_tenant_isolation.py  test_usage_idempotency.py
