[project]
name = "billing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Brajesh Kumar",email = "brajesh.kumar@nextiva.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.123.8,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0)",
    "greenlet (>=3.0,<3.1)",
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic (>=2.0)",
    "email-validator (>=2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "redis (>=4.6)",
    "rq (>=2.6.1,<3.0.0)",
    "celery (>=5.6.0,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.14.7,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
